Fix fixed-star z-index

--- a/frontend/src/stylesheets/project_page.scss
+++ b/frontend/src/stylesheets/project_page.scss
@@ -24,7 +24,7 @@
       position: absolute;
       top: $fixed-star-position-top;
       left: $fixed-star-position-left;
-      z-index: 100;
+      z-index: -1000;
 
       img {
         width: $fixed-star-scale;
